--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <button id="captureButton" style="display:none; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2); height: 30px; background-color: skyblue; color: white; border-radius: 4px; border: none;">결과표 이미지 저장</button>
 
         <div id="box3" style="margin: 0 auto; max-width: 1500px; width: 95%; text-align: center; background-color: aliceblue; border-radius: 15px; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);">
-            <h2>왁물원 등급표</h2>
+            <h2>우왁끼 등급표</h2>
             
                 <img style="display: inline;" src="./rankimg/0.png">
                 <h4 style="display: inline;">미개</h4>
