--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 
-    <body>
+    <body><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZK9P927"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
         <div id="box1">
             <img id="title-img" src="./rankimg/wakki.png" width="45">
             <h1 style="display: inline;"> WAKULATOR</h1>
