Fix: 만우절 버그 수정
미루고 미루던 버그 수정

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <button id="captureButton" style="display:none; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2); height: 30px; background-color: skyblue; color: white; border-radius: 4px; border: none;">결과표 이미지 저장</button>
 
         <div id="box3" style="margin: 0 auto; max-width: 1500px; width: 95%; text-align: center; background-color: aliceblue; border-radius: 15px; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);">
-            <h2>우왁끼 등급표</h2>
+            <h2>왁물원원 등급표</h2>
             
                 <img style="display: inline;" src="./rankimg/0.png">
-                <h4 style="display: inline;">아메</h4>
+                <h4 style="display: inline;">아메바</h4>
                 <h4 style="display: inline;">: 아메바와 같은 상태</h4>
             <br>
                 <img style="display: inline;" src="./rankimg/1.png">
@@ -136,6 +136,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container" style="text-align: center;">
         <h6>ⓒ 2023. WAKULATOR All Rights Reserved.</h6>
         <h6>MADE BY : 그적미적 이파리맛별사탕 Clouuud</h6><br>
+	<h6>Powered by Vercel</h6>
     </div>
 </footer>
 
@@ -387,19 +388,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     function NextRankValue(rank) {
         if (rank == 0) {
-            return [0, 1, 3, 0, "노비"] //게시글 댓글 방문 가입주
+            return [0, 1, 3, 0, "진드기"] //게시글 댓글 방문 가입주
         }
         else if (rank == 1) {
-            return [50, 250, 250, 4, "갓수"] //게시글 댓글 방문 가입주
+            return [50, 250, 250, 4, "닭둘기"] //게시글 댓글 방문 가입주
         }
         else if (rank == 2) {
-            return [300, 700, 500, 12, "핫산"] //게시글 댓글 방문 가입주
+            return [300, 700, 500, 12, "왁무새"] //게시글 댓글 방문 가입주
         }
         else if (rank == 3) {
-            return [700, 1500, 1000, 16, "왁창"] //게시글 댓글 방문 가입주
+            return [700, 1500, 1000, 16, "침팬치"] //게시글 댓글 방문 가입주
         }
         else if (rank == 4) {
-            return [1000, 5000, 5000, 30, "노숙자"] //게시글 댓글 방문 가입주
+            return [1000, 5000, 5000, 30, "느그자"] //게시글 댓글 방문 가입주
         }
 
     }
