--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <button id="captureButton" style="display:none; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2); height: 30px; background-color: skyblue; color: white; border-radius: 4px; border: none;">결과표 이미지 저장</button>
 
         <div id="box3" style="margin: 0 auto; max-width: 1500px; width: 95%; text-align: center; background-color: aliceblue; border-radius: 15px; box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);">
-            <h2>왁물원원 등급표</h2>
+            <h2>왁물원 등급표</h2>
             
                 <img style="display: inline;" src="./rankimg/0.png">
                 <h4 style="display: inline;">아메바</h4>
@@ -135,8 +135,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <footer>
     <div class="container" style="text-align: center;">
         <h6>ⓒ 2023. WAKULATOR All Rights Reserved.</h6>
-        <h6>MADE BY : 그적미적 이파리맛별사탕 Clouuud</h6><br>
-	<h6>Powered by Vercel</h6>
+        <h6>MADE BY : 그적미적 이파리맛별사탕 Clouuud</h6>
+	<h6>Powered by Vercel</h6><br>
     </div>
 </footer>
 
